# noxcipher

./: .gitignore  AGENTS.md  README.md  SETUP.md  build.gradle.kts  keystore.properties  keystore.properties.example  release.keystore  settings.gradle.kts
.agent/rules/: f.md  nobuild.md  rules.md
.agent/workflows/: bugfinder.md  documentation.md
.claude/: settings.local.json
.github/instructions/: android-app.instructions.md  noxcipher.instructions.md  veracrypt-reference.instructions.md
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/gravity/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/noxcipher/: FileBrowserActivity.kt  FileUtils.kt  MainActivity.kt  MainViewModel.kt  NativeReadCallback.kt  NoxCipherApp.kt  NoxCipherDocumentsProvider.kt  RustFile.kt  RustFileSystem.kt  RustNative.kt  SessionManager.kt  VeracryptBlockDevice.kt
app/src/main/java/com/noxcipher/data/local/: VolumeDao.kt  VolumeEntity.kt
app/src/main/java/com/noxcipher/data/repository/: VolumeRepositoryImpl.kt
app/src/main/java/com/noxcipher/di/: AppModule.kt
app/src/main/java/com/noxcipher/util/: Constants.kt  GptUtils.kt
app/src/main/res/layout/: activity_file_browser.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/gravity/: ExampleUnitTest.kt
app/src/test/java/com/noxcipher/: FileUtilsTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: crypto.rs  error.rs  filesystem.rs  format.rs  format_exfat.rs  header.rs  io_callback.rs  io_callback.rs.bak  lib.rs  test_fixes.rs  tests_change_password.rs  volume.rs
rust/src/core/: mod.rs
rust/src/crypto/: aes.rs  mod.rs  xts.rs
rust/src/ffi/: mod.rs
rust/src/fs/: mod.rs
rust/tests/: bug_fixes.rs  security_fixes.rs  tests_change_password.rs
(+6 files in other folders)
