[package]
name = "rust_noxcipher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
android_logger = "0.13"
log = "0.4"

cipher = "0.4"
aes = "0.8"
xts-mode = "0.5"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
byteorder = "1.4"
hex = "0.4"
crc32fast = "1.3"
fscommon = "0.1"
lazy_static = "1.4"
serpent = "0.5"
twofish = "0.7"
whirlpool = "0.10"
ripemd = "0.1"
blake2 = "0.10"
streebog = "0.10"
camellia = "0.1"
kuznyechik = "0.4"

zeroize = "1.6"


