[package]
name = "rust_noxcipher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
android_logger = "0.13"
log = "0.4"

cipher = "0.4"
aes = { version = "0.8", features = ["zeroize"] }
xts-mode = { version = "0.5", features = ["zeroize"] }
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
byteorder = "1.4"
hex = "0.4"
crc32fast = "1.3"
fscommon = "0.1"
lazy_static = "1.4"
serpent = { version = "0.5", features = ["zeroize"] }
twofish = { version = "0.7", features = ["zeroize"] }
whirlpool = "0.10"
ripemd = "0.1"
blake2 = "0.10"
streebog = "0.10"
camellia = { version = "0.1", features = ["zeroize"] }
kuznyechik = { version = "0.4", features = ["zeroize"] }
ntfs = "0.4"
exfat = "0.1"
sha-1 = "0.10"

zeroize = { version = "1.6", features = ["derive"] }


